--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -467,6 +467,10 @@
                                                         <th rowspan="3" class="hidecolumn">JobID</th>
                                                         <th rowspan="3" class="hidecolumn">Position</th>
                                                         <th rowspan="3">ชื่อ</th>
+                                                        <th rowspan="3">Lead</th>
+                                                        <th rowspan="3">Tech</th>
+                                                        <th rowspan="3">Safety</th>
+                                                        <th rowspan="3">Unit Price</th>
                                                         <th rowspan="3">เลขบัตรประชาชน</th>
                                                         <th rowspan="3">ประเภทพนักงาน</th>
                                                         <th rowspan="3">Date</th>
@@ -475,6 +479,7 @@
                                                         <th colspan="2">Working Time</th>
                                                         <th rowspan="3">Break1</th>
                                                         <th rowspan="3">Break2</th>
+                                                        <th rowspan="3">Break3</th>
                                                         <th colspan="6">Number of Hours</th>
                                                         <th rowspan="3" colspan="2"></th>
                                                     </tr>
@@ -503,6 +508,18 @@
                                                         <td>
                                                             <input type="text" id="txtName" name="txtName" onblur="GetManpowerHour('1')" class="FName text-size140"  />
                                                         </td>
+                                                        <td class="text-size100">
+                                                            <input id="chkLead" class="chkLead" type="checkbox"  onchange="GetManJob('0')" style="margin-left: 20px; margin-right: 20px;" />
+                                                        </td>
+                                                        <td class="text-size100">
+                                                            <input id="chkTech" class="chkTech" type="checkbox"  onchange="GetManJob('1')" style="margin-left: 20px; margin-right: 20px;" />
+                                                        </td>
+                                                        <td class="text-size100">
+                                                            <input id="chkSafety" class="chkSafety"  onchange="GetManJob('2')" type="checkbox" style="margin-left: 20px; margin-right: 20px;" />
+                                                        </td>
+                                                        <td>
+                                                            <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" disabled />
+                                                        </td>
                                                         <td class="hidecolumn">
                                                             <input id="ManpowerID" type="text" value="" class="ManpowerID" disabled />
                                                         </td>
@@ -526,15 +543,6 @@
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtManDay" class="ManDay select-size50-height23 txtdisablerow" disabled />
-                                                            @*<select class="ManDay select-size50">
-                                                                <option value="1">อา</option>
-                                                                <option value="2">จ</option>
-                                                                <option value="3">อ</option>
-                                                                <option value="3">พ</option>
-                                                                <option value="3">พฤ</option>
-                                                                <option value="3">ศ</option>
-                                                                <option value="3">ส</option>
-                                                            </select>*@
                                                         </td>
                                                         <td>
                                                             <input type="text" id="txtManTime" name="txtManTime" class="ManTime text-size60 textcenter">
@@ -550,6 +558,9 @@
                                                         </td>
                                                         <td class="text-size100">
                                                             <input id="chkBreak2" class="chkBreak2" type="checkbox" onchange="GetManpowerHour('2')" style="margin-left: 20px; margin-right: 20px;" />
+                                                        </td>
+                                                        <td class="text-size100">
+                                                            <input id="chkBreak3" class="chkBreak3" type="checkbox" onchange="GetManpowerHour('3')" style="margin-left: 20px; margin-right: 20px;" />
                                                         </td>
                                                         <td>
                                                             <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter txtdisablerow" disabled/>
@@ -598,6 +609,18 @@
                                                         <td>
                                                             <input type="text" id="txtName" name="txtName" onblur="GetManpowerHour('1')" class="FName text-size140"/>
                                                         </td>
+                                                        <td class="text-size100">
+                                                            <input id="chkLead" class="chkLead" type="checkbox"  onchange="GetManJob('0')" style="margin-left: 20px; margin-right: 20px;" />
+                                                        </td>
+                                                        <td class="text-size100">
+                                                            <input id="chkTech" class="chkTech" type="checkbox"  onchange="GetManJob('1')" style="margin-left: 20px; margin-right: 20px;" />
+                                                        </td>
+                                                        <td class="text-size100">
+                                                            <input id="chkSafety" class="chkSafety" type="checkbox"  onchange="GetManJob('2')" style="margin-left: 20px; margin-right: 20px;" />
+                                                        </td>
+                                                        <td>
+                                                            <input type="text" id="txtManPrice" class="ManPrice select-size50-height23 txtdisablerow" disabled />
+                                                        </td>
                                                         <td>
                                                             <input id="txtCardID" type="text" value="" class="CardID text-size120 txtdisablerow" disabled />
                                                         </td>
@@ -633,6 +656,9 @@
                                                         </td>
                                                         <td class="text-size100">
                                                             <input id="chkBreak2" class="chkBreak2" type="checkbox" onchange="GetManpowerHour('2')" style="margin-left: 20px; margin-right: 20px;"/>
+                                                        </td>
+                                                        <td class="text-size100">
+                                                            <input id="chkBreak3" class="chkBreak3" type="checkbox" onchange="GetManpowerHour('3')" style="margin-left: 20px; margin-right: 20px;" />
                                                         </td>
                                                         <td>
                                                             <input id="txtTotalHours" type="text" value="" class="TotalHours text-size50 textcenter txtdisablerow" disabled/>
