--- a/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
+++ b/Alpha/AlphaMvc/Views/WageTeachnician/EditWageTeachnician.cshtml
@@ -55,6 +55,7 @@
                             <th colspan="2">WORKING TIME</th>
                             <th rowspan="3">Break1</th>
                             <th rowspan="3">Break2</th>
+                            <th rowspan="3">Break3</th>
                             <th colspan="6">NUMBER OF HOURS</th>
                             <th rowspan="3">Additionnal Wages (Baht)</th>
                             <th rowspan="3">Deduction(-)(Baht)</th>
@@ -90,11 +91,13 @@
                             <td></td>
                             <td></td>
                             <td></td>
+                            <td></td>
                             <td>TOTAL</td>
                             <td>(WH3%)</td>
                         </tr>
                         <tr>
                             <td colspan="8">TOTAL (HRS)</td>
+                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
@@ -114,6 +117,7 @@
                             <td></td>
                             <td></td>
                             <td></td>
+                            <td></td>
                             <td id="totalBathNormalDay"></td>
                             <td id="totalBathNormal"></td>
                             <td id="totalBathPremium"></td>
@@ -129,6 +133,7 @@
                             <td></td>
                             <td></td>
                             <td></td>
+                            <td></td>
                             <td id="totalAmountNormalDay"></td>
                             <td id="totalAmountNormal"></td>
                             <td id="totalAmountPremium"></td>
@@ -141,6 +146,7 @@
                         </tr>
                         <tr>
                             <td colspan="8">TOTAL WAGES(BAHT)</td>
+                            <td></td>
                             <td></td>
                             <td></td>
                             <td></td>
